# askdata-v1

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start-askdata-demo.sh
5-1-data-preprocessing-deliverable/: DATA_PREPROCESSING_HANDOFF.md  build_backend.py  dataset-preprocessing-engineer-plan.md  pyproject.toml
5-1-data-preprocessing-deliverable/src/askdata/: cli.py
backend/: Dockerfile  INSTRUCTIONS.md
backend/askdata/: cli.py
backend/askdata/agent/: __init__.py  ambiguity.py  answer_shape.py  graph.py  intent.py  lg_graph.py  lg_nodes.py  lg_prompts.py  lg_protocols.py  lg_runner.py  lg_state.py  lg_trace.py  pipeline.py  prompts.py  question_analyzer.py  react_sql_agent.py  sql_quality.py  state.py  understanding.py
backend/askdata/analysis/: __init__.py  result_analyzer.py
backend/askdata/api/: README.md  __init__.py  app.py  query_service.py  request_context.py  response_models.py  routes.py  schemas.py  session_manager.py  session_store.py  trace.py
backend/askdata/core/: config.py  llm.py  paths.py
backend/askdata/data/: __init__.py  bird_io.py  schema_catalog.py  source_store.py
backend/askdata/db/: __init__.py  error_normalizer.py  executor .py  executor.py  optimizer.py  query_runner.py  validator.py
backend/askdata/eval/: __init__.py  demo_suite.py  manual_regressions.py  metrics.py  runner.py
backend/askdata/knowledge/: __init__.py  store.py
backend/askdata/retrieval/: __init__.py  (+3 more)
benchmarks/: README.md  bird-minidev-v4pro-seed42-100.json  core-acceptance-scenarios.json
data-processing/: README.md  askdata  dataset-preprocessing-engineer-plan.md
data-processing/scripts/: prepare_raw_bird.py
docs/: AskData-V2.1-技术文档.md  acceptance-matrix.md  acceptance-report.md  api-reference.md  architecture-v2.md  architecture.md  company-data-deployment-guide.md  deployment-and-operations.md  development-and-testing.md  product-guide.md  release-process.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  theme.test.ts  theme.ts
reports/: v2-demo-summary.md
scripts/: setup-dev-env.sh
tests/: test_acceptance_manifest.py  test_admin_guard.py  test_agent_graph.py  test_ambiguity.py  test_analyzer.py  test_answer_shape.py  test_bird_io.py  test_chart_builder.py  test_cli.py  test_config.py  test_context_and_skills.py  test_data_processing_contract.py  test_data_source_store.py  test_db_adapters.py  test_demo_suite.py  test_embedding_client.py  test_hybrid_retriever.py  test_intent.py  test_knowledge_store.py  test_llm.py  test_manual_regressions.py  test_metrics.py  test_operations.py  test_paths.py  test_permissions.py  test_pipeline.py  test_query_optimizer.py  test_query_route.py  test_query_runner.py  test_query_service.py  test_query_stream.py  test_question_analyzer.py  test_react_sql_agent.py  test_response_models.py  test_retriever.py  test_runner.py  test_schema_catalog_routes.py  test_session_manager.py  test_session_routes.py  test_session_store.py  (+5 more)
tests/fixtures/: manual_regressions.json  v2_demo_cases.json
(+80 files in other folders)
