[project]
name = "askdata"
version = "0.1.0"
description = "V1 Text-to-SQL Platform based on BIRD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "sqlglot>=25.5.0",
    "langgraph>=0.1.3",
    "openai>=1.34.0",
    "faust-cchardet>=2.2.1",
]

[project.optional-dependencies]
vector = [
    "pymilvus>=2.4.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
askdata = "askdata.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
askdata = ["skills/*.md"]
